--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap-icons": "^1.11.1",
     "core-js": "^3.8.3",
     "mitt": "^3.0.1",
+    "pinia": "^2.1.7",
     "vee-validate": "^4.11.8",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
