--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "dependencies": {
     "@vee-validate/i18n": "^4.11.8",
     "@vee-validate/rules": "^4.11.8",
-    "axios": "^1.5.0",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "jquery": "^3.7.1",
     "mitt": "^3.0.1",
     "pinia": "^2.1.7",
+    "popper.js": "^1.16.1",
     "vee-validate": "^4.11.8",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
